--- a/client/src/index.css
+++ b/client/src/index.css
@@ -393,12 +393,15 @@
 
   .magazine-grid {
     display: grid;
+    /* grid-template-columns: 1fr;
+    grid-auto-rows: minmax(300px, auto);
+    grid-auto-flow: row dense; */
+
+
+
     /* grid-template-columns: repeat(12, 1fr);
     gap: 2rem; */
-    grid-template-columns: 1fr;
     /* gap: 1.5rem; */
-    grid-auto-rows: minmax(300px, auto);
-    grid-auto-flow: row dense;
   }
 
   @media (min-width: 1024px) {
@@ -529,8 +532,14 @@
     justify-content: center;
   }
 
+  .magazine-card--large {
+    @apply grid-row-span-2 grid-col-span-12;
+  }
+
+  
   .magazine-card--large .magazine-card__image {
-    height: 300px;
+     max-width: 300px;
+     margin: 0 auto;
   }
 
   .magazine-card--medium .magazine-card__image {
