--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1053,12 +1053,22 @@ html[data-scroll-direction="down"] .burgerstack {
   justify-content: center;
 }
 
+.pdf-cover-title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .pdf-cover-content {
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.pdf-cover-image-end {
+  margin: 0 220pt;
 }
 
 .pdf-cover-image {
@@ -1077,11 +1087,28 @@ html[data-scroll-direction="down"] .burgerstack {
 
 .pdf-title {
   font-family: 'Playfair Display', serif;
-  font-size: 36pt;
+  font-size: 22pt;
   font-weight: 700;
   text-align: center;
-  margin-bottom: 10mm;
+  margin-bottom: -20mm; 
+   margin-left: 22mm;
   color: #2c3e50;
+}
+
+.pdf-title-2 {
+  width: 174pt;
+  display: flex;
+  align-items: flex-end;
+  font-size: 22pt;
+  font-family: 'Playfair Display', serif;
+  justify-content: center;
+  font-weight: 700;
+}
+
+.pdf-title-2 img {
+  width: 68pt;
+    position: relative;
+    
 }
 
 .pdf-issue-number {
@@ -1090,6 +1117,7 @@ html[data-scroll-direction="down"] .burgerstack {
   font-weight: 400;
   text-align: center;
   margin-bottom: 5mm;
+  margin-top: 13mm;
   color: #34495e;
 }
 
@@ -1199,6 +1227,7 @@ html[data-scroll-direction="down"] .burgerstack {
   color: #7f8c8d;
   font-style: italic;
   text-align: right;
+  margin-right: 40pt;
 }
 
 .pdf-article-section {
